Add Redis and Http Proxy